Final. Fix vertical align and background

--- a/data/styles/_responsive.less
+++ b/data/styles/_responsive.less
@@ -43,14 +43,37 @@
 
 @media all
   and (min-width: 1170px) {
+
   ul {
     &.cards {
       width: 1110px;
       margin: 0 auto;
     }
+
     li:last-child {
       float: none;
       margin: 0 auto;
     }
   }
+}
+
+@media all
+  and (min-width: 1300px) {
+  .centered-container {
+    margin: 50px 0 0 0;
+  }  
+}
+
+@media all
+  and (min-width: 1600px) {
+  .centered-container {
+    margin: 100px 0 0 0;
+  }  
+}
+
+@media all
+  and (min-width: 1920px) {
+  .centered-container {
+    margin: 200px 0 0 0;
+  }  
 }
